--- a/style.css
+++ b/style.css
@@ -1,3 +1,55 @@
+:root{
+    /* Theme 1 */
+        /* Backgrounds  */
+    --very-dark-desaturated-blue-main-bg :hsl(222, 26%, 31%); 
+    --keypad-bg :                hsl(223, 31%, 20%);
+    --screen-bg :                hsl(224, 36%, 15%);
+        /* key colors */
+    --desaturated-dark-blue-kbg: hsl(225, 21%, 49%);
+    --desaturated-dark-blue-ks : hsl(224, 28%, 35%);
+    --key-bg-toggle:             hsl(6, 63%, 50%);
+    --dark-red-ks:               hsl(6, 70%, 34%); 
+    --light-grayish-orange-kbg:  hsl(30, 25%, 89%);
+    --grayish-orange-ks:         hsl(28, 16%, 65%);
+        /* Text colors */
+    --very-dark-grayish-blue:    hsl(221, 14%, 31%); 
+    --white:                     hsl(0, 0%, 100%);
+    
+    /* Theme 2 */
+        /* Backgrounds  */
+    --light-gray-main-gb: hsl(0, 0%, 90%);
+    --grayish-red-toggle-bg: hsl(0, 5%, 81%);
+    --keypad-bg: hsl(0, 5%, 81%); 
+    --very-light-gray-screen-bg: hsl(0, 0%, 93%);
+        /* Keys  */
+    --dark-moderate-cyan-kbg: hsl(185, 42%, 37%); 
+    --very-dark-cyan-ks: hsl(185, 58%, 25%);
+    --orange-kbg-toggle: hsl(25, 98%, 40%);
+    --dark-orange-ks: hsl(25, 99%, 27%);
+    --light-grayish-yellow-key-bg: hsl(45, 7%, 89%);
+    -dark-grayish-orange-ks: hsl(35, 11%, 61%);
+        /* Text  */
+    --very-dark-grayish-yellow: hsl(60, 10%, 19%);
+    --white: hsl(0, 0%, 100%);
+
+    /* Theme 3  */
+        /* Backgrounds  */
+    --very-dark-violet-main-bg: hsl(268, 75%, 9%);
+    --very-dark-violet-toggle-bg:hsl(268, 71%, 12%);
+    --keypad-bg: hsl(268, 71%, 12%); 
+    --screen-bg: hsl(268, 71%, 12%);
+        /* Keys  */
+    --dark-violet-key-bg: hsl(281, 89%, 26%);
+    --vivid-magenta-ks: hsl(285, 91%, 52%);
+    --pure-cyan-key-bg-toggle: hsl(176, 100%, 44%);
+    --soft-cyan-ks: hsl(177, 92%, 70%);
+    --very-dark-violet-key-bg: hsl(268, 47%, 21%);
+    --dark-magenta-ks: hsl(290, 70%, 36%);
+        /* Text  */
+    --light-yellow: hsl(52, 100%, 62%);
+    --very-dark-blue: hsl(198, 20%, 13%);
+    --white: hsl(0, 0%, 100%);
+}
 .attribution {
     font-size: 11px;
     text-align: center;
