--- a/style.css
+++ b/style.css
@@ -1,54 +1,57 @@
-:root{
-    /* Theme 1 */
-        /* Backgrounds  */
-    --very-dark-desaturated-blue-main-bg :hsl(222, 26%, 31%); 
-    --keypad-bg :                hsl(223, 31%, 20%);
-    --screen-bg :                hsl(224, 36%, 15%);
-        /* key colors */
-    --desaturated-dark-blue-kbg: hsl(225, 21%, 49%);
-    --desaturated-dark-blue-ks : hsl(224, 28%, 35%);
-    --key-bg-toggle:             hsl(6, 63%, 50%);
-    --dark-red-ks:               hsl(6, 70%, 34%); 
-    --light-grayish-orange-kbg:  #eae3dc;
-    --grayish-orange-ks:         #b4a597;
-        /* Text colors */
-    --very-dark-grayish-blue:    hsl(221, 14%, 31%); 
-    --white:                     hsl(0, 0%, 100%);
-    
-    /* Theme 2 */
-        /* Backgrounds  */
-    --light-gray-main-gb:       hsl(0, 0%, 90%);
-    --grayish-red-toggle-bg:    hsl(0, 5%, 81%);
-    --keypad-bg:                hsl(0, 5%, 81%); 
-    --very-light-gray-screen-bg:hsl(0, 0%, 93%);
-        /* Keys  */
-    --dark-moderate-cyan-kbg:   hsl(185, 42%, 37%); 
-    --very-dark-cyan-ks:        hsl(185, 58%, 25%);
-    --orange-kbg-toggle:        hsl(25, 98%, 40%);
-    --dark-orange-ks:           hsl(25, 99%, 27%);
-    --light-grayish-yellow-key-bg: hsl(45, 7%, 89%);
-    -dark-grayish-orange-ks:    hsl(35, 11%, 61%);
-        /* Text  */
-    --very-dark-grayish-yellow: hsl(60, 10%, 19%);
-    --white:                    hsl(0, 0%, 100%);
-
-    /* Theme 3  */
-        /* Backgrounds  */
-    --very-dark-violet-main-bg: hsl(268, 75%, 9%);
-    --very-dark-violet-toggle-bg:hsl(268, 71%, 12%);
-    --keypad-bg:                hsl(268, 71%, 12%); 
-    --screen-bg:                hsl(268, 71%, 12%);
-        /* Keys  */
-    --dark-violet-key-bg:       hsl(281, 89%, 26%);
-    --vivid-magenta-ks:         hsl(285, 91%, 52%);
-    --pure-cyan-key-bg-toggle:  hsl(176, 100%, 44%);
-    --soft-cyan-ks:             hsl(177, 92%, 70%);
-    --very-dark-violet-key-bg:  hsl(268, 47%, 21%);
-    --dark-magenta-ks:          hsl(290, 70%, 36%);
-        /* Text  */
-    --light-yellow:             hsl(52, 100%, 62%);
-    --very-dark-blue:           hsl(198, 20%, 13%);
-    --white:                    hsl(0, 0%, 100%);
+:root[data-theme= "dark"]{
+    --main-bg: hsl(222, 26%, 31%);
+    --toggle-bg: hsl(223, 31%, 20%);
+    --keypad-bg: var(--toggle-bg);
+    --screen-bg: hsl(224, 36%, 15%);
+    --key-bg: hsl(30, 25%, 89%);
+    --key-sh: hsl(28, 16%, 65%);
+    --erase-bg: hsl(225, 21%, 49%);
+    --erase-sh: hsl(224, 28%, 35%);
+    --equal-bg: var(--toggleKey-bg);
+    --equal-sh: hsl(6, 70%, 34%);
+    --toggleKey-bg: hsl(6, 63%, 50%);
+    --calc-bg: var(--main-bg);
+    --main-text-color: hsl(0, 0%, 100%);
+    --btn-text-color: hsl(221, 14%, 31%);
+    --erase-color: var(--main-text-color);
+    --equal-color: var(--main-text-color);
+}
+:root[data-theme = "light"] {
+    --main-bg: hsl(0, 0%, 90%);
+    --toggle-bg: hsl(0, 5%, 81%);
+    --keypad-bg: var(--toggle-bg);
+    --screen-bg: hsl(0, 0%, 93%);
+    --key-bg: hsl(45, 7%, 89%);
+    --key-sh: hsl(35, 11%, 61%);
+    --erase-bg: hsl(185, 42%, 37%);
+    --erase-sh: hsl(185, 58%, 25%);
+    --equal-bg: var(--toggleKey-bg);
+    --equal-sh: hsl(6, 70%, 34%);
+    --toggleKey-bg: hsl(25, 98%, 40%);
+    --calc-bg: var(--main-bg);
+    --main-text-color: hsl(60, 10%, 19%);
+    --btn-text-color: var(--main-text-color);
+    --erase-color: hsl(0, 0%, 100%);
+    --equal-color: var(--erase-color);
+}
+:root[data-theme="love"] {
+    --main-bg: hsl(268, 75%, 9%);
+    --toggle-bg: hsl(268, 71%, 12%);
+    --keypad-bg: var(--toggle-bg);
+    --screen-bg: hsl(268, 71%, 12%);
+    /* key bg */
+    --key-bg: hsl(268, 48%, 21%);
+    --key-sh: hsl(290, 70%, 36%);
+    --erase-bg: hsl(281, 89%, 26%);
+    --erase-sh: hsl(285, 91%, 52%);
+    --equal-bg: var(--toggleKey-bg);
+    --equal-sh: #6cf9f2;
+    --toggleKey-bg: #00e0d1;
+    --calc-bg: var(--main-bg);
+    --main-text-color: hsl(52, 100%, 62%);
+    --btn-text-color: var(--main-text-color);
+    --erase-color: #ffffff;
+    --equal-color: hsl(198, 19%, 13%)
 }
 
 *, *::after, *::before{
@@ -57,13 +60,13 @@
     padding: 0;
 }
 body{
-    background-color: var(--very-dark-desaturated-blue-main-bg);
+    background-color: var(--main-bg);
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
     font-family: 'League Spartan', sans-serif;
-    user-select: none; /* prevent text selection when user double clicks the buttons */
+    user-select: none; /* prevents text selection when user double clicks the buttons */
 }
 .container{
     width: 300px;
@@ -76,7 +79,7 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: var(--white);
+    color: var(--main-text-color);
 }
  /* style range input for the theme selector */
  .themeSelector{
@@ -87,12 +90,10 @@ body{
     align-items: center;
     height: 2rem;
     width: 5rem;
-    /* background-color: aqua; */
     font-size: .6rem;
  }
 label{
     display: flex;
-    
     justify-content: space-between;
     position: absolute;
     width: 2rem;
@@ -105,12 +106,11 @@ input[type="range"] {
     margin: 0;
     -webkit-appearance: none;
     appearance: none;
-    background-color: var(--screen-bg);
+    background-color: var(--toggle-bg);
     border-radius: .5rem;
     cursor: pointer;
 }
 input[type="range"]::-webkit-slider-runnable-track {
-    background: #053a5f;
     height: 0.9rem;
     border-radius: .5rem;
     background-color: transparent;
@@ -119,8 +119,8 @@ input[type="range"]::-webkit-slider-runnable-track {
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none; /* Override default look */
     appearance: none;
-    /* margin: 2px; Centers thumb on the track */
-    background-color: var(--key-bg-toggle);
+   
+    background-color: var(--toggleKey-bg);
     height: 0.6rem;
     width: 0.6rem;
     border-radius: 50%;
@@ -131,20 +131,22 @@ input[type="range"]::-webkit-slider-thumb {
     background-color: var(--screen-bg);
     margin: .7rem auto;
     border-radius: .5rem;
-    color: var(--white);
-    padding: .5rem;
+    color: var(--main-text-color);
+    padding: 1rem;
     text-align: right;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
-.currentNumber{
-    font-size: 1.5rem;
+.currentNum{
+    font-size: 1.8rem;
+    color: var(--main-text-color);
 
 }
-.result{
+.previousNum{
     font-size: 0.8rem;
     display: none;
+    color: var(--main-text-color);
 }
 
 .buttons{
@@ -161,13 +163,13 @@ input[type="range"]::-webkit-slider-thumb {
 
 }
 .calc-btn{
-    background-color: var(--light-grayish-orange-kbg);
+    background-color: var(--key-bg);
     padding: .5rem;
     border-radius: .2rem;
-    box-shadow: 0px 1px 1px 1px var(--grayish-orange-ks);
+    box-shadow: 0px 1px 1px 0px var(--key-sh);
     cursor: pointer;
     transition: all 0.2s;
-    
+    color: var(--btn-text-color);
 }
 .calc-btn:active{
     transform: translateY(2px);
@@ -177,14 +179,18 @@ input[type="range"]::-webkit-slider-thumb {
 }
 .equal{
     grid-column: 3/5;
-    color: var(--white);
-    background-color: var(--key-bg-toggle);
-    box-shadow: 0px 1px 1px 1px var(--key-bg-toggle);
+    color: var(--equal-color);
+    background-color: var(--equal-bg);
+    box-shadow: 0px 1px 1px 1px var(--equal-sh);
+}
+.equal:hover{
+    background-color: hsl(25, 99%, 27%);
 }
 .erase{
-    color: var(--white);
-    background-color: var(--desaturated-dark-blue-kbg);
-    box-shadow: 0px 1px 1px 1px var(--desaturated-dark-blue-ks);
+    color: var(--erase-color);
+    background-color: var(--erase-bg);
+    box-shadow: 0px 1px 1px 1px var(--erase-sh);
+    font-size: 0.8rem;
 }
 .attribution {
     font-size: 13px;
@@ -193,5 +199,8 @@ input[type="range"]::-webkit-slider-thumb {
     bottom: 0;
 }
 .attribution a {
-    color: hsl(228, 45%, 44%);
+    color: var(--main-text-color);
 }
+
+/* Theme2 */
+
