--- a/style.css
+++ b/style.css
@@ -138,14 +138,15 @@ input[type="range"]::-webkit-slider-thumb {
     flex-direction: column;
     justify-content: center;
 }
-.currentNum{
+.display{
+    height: 1rem;
     font-size: 1.8rem;
     color: var(--main-text-color);
+    word-wrap: break-word;
 
 }
-.previousNum{
+.display2{
     font-size: 0.8rem;
-    display: none;
     color: var(--main-text-color);
 }
 
@@ -160,7 +161,6 @@ input[type="range"]::-webkit-slider-thumb {
     text-align: center;
     padding: 1rem;
     border-radius: .4rem;
-
 }
 .calc-btn{
     background-color: var(--key-bg);
